# mcp-esios

./: .gitignore  Dockerfile  README.md  claude_desktop_config.json  pyproject.toml
src/mcp_esios/: __init__.py  mcp_esios.py
src/mcp_esios/services/: __init__.py  esios_service.py
