[project]
name = "mcp-esios"
dynamic = ["version"]
description = "Python package that provides access to REE ESIOS API as an MCP server"
authors = [
  {name = "Marcos Ventosa", email = "marcosventosa@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "mcp>=1.6.0",
    "click>=8.1.7",
    "pydantic>=2.5.3",
]

[project.scripts]
mcp-esios = "mcp_esios:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mcp_esios/__version__.py"